<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="shoeDataModel"
            type="com.example.udacitystarter.shoeList.ShoeDataModel" />

        <variable
            name="viewModel"
            type="com.example.udacitystarter.shoeList.ShoeListViewModel"/>
    </data>

<!--I used a Constraint Layout for this to get all of the fields to lay out the way I wanted them to. It makes it look cleaner than other layouts. -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/edit_shoe_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/found_shoe"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tell_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/tell_us"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_shoe_screen" />

        <TextView
            android:id="@+id/shoe_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/shoe_name"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/edit_shoe_name"
            app:layout_constraintEnd_toStartOf="@+id/edit_shoe_name"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/shoe_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/location"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/edit_location"
            app:layout_constraintEnd_toStartOf="@+id/edit_location"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/edit_shoe_gender"
            android:layout_width="243dp"
            android:layout_height="48dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:hint="@string/gender_type"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@={viewModel.gender}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_location" />

        <EditText
            android:id="@+id/edit_shoe_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="68dp"
            android:ems="10"
            android:hint="@string/shoe_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@={viewModel.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tell_us" />

        <EditText
            android:id="@+id/edit_location"
            android:layout_width="242dp"
            android:layout_height="48dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:hint="@string/shoe_location"
            android:inputType="textPersonName"
            android:text="@={viewModel.location}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_shoe_name" />

        <TextView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/shoe_gender"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/edit_shoe_gender"
            app:layout_constraintEnd_toStartOf="@+id/edit_shoe_gender"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/shoe_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/shoe_size"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/edit_size"
            app:layout_constraintEnd_toStartOf="@+id/edit_size"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/edit_size"
            android:layout_width="105dp"
            android:layout_height="51dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="168dp"
            android:ems="10"
            android:hint="7.5"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:text="@={viewModel.size}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_shoe_gender" />

        <TextView
            android:id="@+id/shoe_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            app:layout_constraintBaseline_toBaselineOf="@+id/edit_price"
            app:layout_constraintEnd_toStartOf="@+id/edit_price"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/edit_price"
            android:layout_width="133dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="140dp"
            android:ems="10"
            android:hint="@string/price"
            android:inputType="numberDecimal"
            android:text="@={viewModel.price}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_size" />

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/save"
            android:textColor="@color/design_default_color_on_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_price" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="84dp"
            android:backgroundTint="@color/design_default_color_error"
            android:text="@string/cancel_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/save"
            app:layout_constraintVertical_bias="0.216" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>