<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.udacitystarter.welcome.WelcomeFragment">
    <!-- Using the Constraint Layout here allows for the items within the layout to be placed easier than a Linear Layout. It allows for precise placement as well as
    moving items together within the layout.-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/welcome_screen"
            android:layout_width="331dp"
            android:layout_height="126dp"
            android:layout_marginTop="80dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_error"
            android:textSize="48sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toTopOf="@+id/red_bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/red_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/red_bottom_shoe"
            android:src="@drawable/redbottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dream_shoe_text"
            android:layout_width="313dp"
            android:layout_height="172dp"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="@dimen/welcome"
            android:text="@string/dream_shoe"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="24sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_screen"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/welcome_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/red_bottom" />

        <Button
            android:id="@+id/instructions_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:text="@string/instructions"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>