<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.udacitystarter.navigation.Instructions">
    <!-- Using the Constraint Layout here allows for the items within the layout to be placed easier than a Linear Layout. It allows for precise placement as well as
    moving items together within the layout.-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/how_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/welcome"
            android:layout_marginBottom="@dimen/welcome"
            android:text="@string/how_to"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="48sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/step_one"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.163" />

        <ImageView
            android:id="@+id/faded_shoes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/welcome"
            android:contentDescription="@string/faded_shoes"
            android:src="@drawable/fadedshoes"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/step_one"
            android:layout_width="387dp"
            android:layout_height="57dp"
            android:layout_marginBottom="56dp"
            android:text="@string/step_one"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/step_two"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/step_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/welcome"
            android:layout_marginEnd="@dimen/welcome"
            android:layout_marginBottom="88dp"
            android:text="@string/step_two"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/step_three"
            app:layout_constraintEnd_toEndOf="@+id/faded_shoes"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/step_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="240dp"
            android:text="@string/step_three"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/faded_shoes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/instructions_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/welcome"
            android:layout_marginBottom="@dimen/welcome"
            android:text="@string/search"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/step_three" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>